force yarn version

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,11 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install dependencies
+        run: |
+          corepack enable
+          yarn set version berry
+
+      - name: Install dependencies
         run: yarn install --immutable
 
       - name: Build
