--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,10 +18,12 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install dependencies
+      - name: Install yarn berry
         run: |
           corepack enable
           yarn set version berry
+          yarn config set npmScopes.mamacrowd.npmRegistryServer https://npm.pkg.github.com
+          yarn config set npmScopes.mamacrowd.npmAuthToken ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install dependencies
         run: yarn install --immutable
@@ -30,5 +32,3 @@ jobs:
         run: yarn build
 
       - run: yarn npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
