🚀 chore(publish.yml): add step to upload yenv artifact after publishing package 🔄 chore(package.json): update package name and repository URL to match new naming convention

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,3 +32,8 @@ jobs:
         run: yarn build
 
       - run: yarn npm publish
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: yenv
+          path: bundles/@yarnpkg/plugin-yenv.js
