🔧 chore(publish.yml): add npmPublishRegistry configuration to yarn config to specify the registry for publishing packages to GitHub Packages 🔧 chore(.gitignore): add .pnp* to the list of ignored files to exclude Plug'n'Play files from version control

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,7 @@ jobs:
           corepack enable
           yarn set version berry
           yarn config set npmScopes.mamacrowd.npmRegistryServer https://npm.pkg.github.com
+          yarn config set npmScopes.mamacrowd.npmPublishRegistry https://npm.pkg.github.com
           yarn config set npmScopes.mamacrowd.npmAuthToken ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install dependencies
